--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,8 +9,12 @@
     ],
     "remoteUser": "vscode",
     "mounts": [
-        "type=bind,source=${localEnv:HOME}/.ssh,target=/home/vscode/.ssh"
+        "type=bind,source=${localEnv:HOME}/.ssh,target=/home/vscode/.ssh",
+        "type=bind,source=/tmp/.X11-unix,target=/tmp/.X11-unix",
     ],
+    "containerEnv": {
+        "DISPLAY": "unix:0"
+    },
     "extensions": [
         "visualstudioexptteam.vscodeintellicode",
         "ms-python.python",
