--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
-tqdm==4.62.3
-PyDrive==1.3.1
+tqdm~=4.62.3
+PyDrive~=1.3.1
+seaborn~=0.11.2
+pybids~=0.14.0
+matplotlib~=3.5.1
+autopep8~=1.6.0
+notebook~=6.4.7
